--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ libsass==0.20.0
 Mako==1.1.3
 MarkupSafe==1.1.1
 Pillow==7.2.0
+psycopg2==2.8.5
 pyasn1==0.4.8
 pycodestyle==2.6.0
 pycparser==2.20
